--- a/YahooFinanceAPI/YahooFinanceAPI.csproj
+++ b/YahooFinanceAPI/YahooFinanceAPI.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Application\GptFinance.Application.csproj" />
+    <ProjectReference Include="..\Infrastructure\GptFinance.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
