--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,10 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-      #- task: VSTest@2
-      #inputs:
-      #platform: '$(buildPlatform)'
-      #configuration: '$(buildConfiguration)'
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'Visual Studio Enterprise Subscription – MPN (fb20c78f-38ea-4b98-b457-339386adfa43)'
+    appType: 'webApp'
+    appName: 'gptfinance'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    deploymentMethod: 'auto'
