Added middleware to handle exceprions

--- a/YahooFinanceAPI/appsettings.json
+++ b/YahooFinanceAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=YahooFinanceAPI;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=.;Initial Catalog=YahooFinanceAPI;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=true;",
+    "DefaultConnection2": "Server=tcp:gpt-sql-server.database.windows.net,1433;Initial Catalog=gpt-finance-database;Persist Security Info=False;User ID=micke;Password=WebDev86245!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
