Add application insights and a test logging

--- a/YahooFinanceAPI/appsettings.json
+++ b/YahooFinanceAPI/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=3fe26b44-a715-40a8-9c9b-7fd53489854b;IngestionEndpoint=https://swedencentral-0.in.applicationinsights.azure.com/"
+  },
   "AllowedHosts": "*"
 }
