Move to a more ddd model design. Restructuring and adding StockExchange as a consept

--- a/Infrastructure/GptFinance.Infrastructure.csproj
+++ b/Infrastructure/GptFinance.Infrastructure.csproj
@@ -25,5 +25,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
