--- a/YahooFinanceAPI/YahooFinanceAPI.csproj
+++ b/YahooFinanceAPI/YahooFinanceAPI.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\GptFinance.Application.csproj" />
+    <ProjectReference Include="..\Infrastructure\GptFinance.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
